# Decode_S1506

./: .gitignore  README.md  Sd1r_4815Ped.txt  Sd2r_4815Ped.txt  Yd_4815Ped.txt  Yu5225_4815Ped.txt  decode.cxx  run.sh  runFiles.sh
analysis/: Analysis12Be.cpp  Analysis12Be.h  BeCutIC.root  CMakeLists.txt  Reduce12Be.cpp  Reduce12Be.h  Sd1r_AlphaCalibration.txt  Sd1r_InBeamCalibration.txt  Sd1s_Calibration.txt  Sd2r_Calibration.txt  Sd2s_Calibration.txt  TypeDef.h
